--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Quiz | Pablo Gimenez</title>
+    <title>Quizi | Pablo Gimenez</title>
   </head>
   <body>
     <div class="header">
@@ -19,13 +19,13 @@
     <div class="quiz-container">
       <div class="quiz-card animate__animated">
         <div class="text-options animate__animated animate__fadeIn">
-              <h2 class="Question">Cual es la capital de la gorda de tu madres</h2><p class="question-number">1</p>
+              <h2 class="Question"></h2><p class="question-number">1</p>
               <div class="separator"></div>
               <div class="answers">
-                <div class="ans 1" style="--time: 1s">noruega </div>
-                <div class="ans 2" style="--time: 1s">china </div>
-                <div class="ans 3" style="--time: 1s">japon</div>
-                <div class="ans 4" style="--time: 1s">hjupasdsd</div>
+                <div class="ans 1" style="--time: 1s"></div>
+                <div class="ans 2" style="--time: 1s"></div>
+                <div class="ans 3" style="--time: 1s"></div>
+                <div class="ans 4" style="--time: 1s"></div>
               </div>
         </div>
       </div>
