added final screen for questions, added music and background corrections, correct the timing between questions, more styling, correct decode of html

--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
         </div>
       </div>
     </div>
+  <div class="final-questions">
+      <!-- <div class="final">
+        <h2></h2>
+        <div class="buttons"><div class="final1"></div><div class="final2"></div></div>
+      </div> -->
+  </div>
   </body>
 </html>
