rest links to rrss

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="header">
       <h1>QUIZ</h1>
       <h3 style="text-transform: uppercase;">Random quizi</h3>
+      <img src="" alt="" class="image">
     </div>
     <div class="quiz-container">
       <div class="quiz-card animate__animated">
@@ -36,5 +37,23 @@
         <div class="buttons"><div class="final1"></div><div class="final2"></div></div>
       </div> -->
   </div>
+  <canvas id="miCanvas" width="800" height="400" style="display: none;"></canvas>
+  <script src="https://kit.fontawesome.com/05c342c5f5.js" crossorigin="anonymous"></script>
+  <div class="final-card-count" style="display: none;">
+    <h3>Share with your friends!</h3>
+    <img src="" alt="" class="final-card-image">
+    <div class="footer">
+      <div class="final-card-buttons">
+        <div class="final-card-rrss">
+          <div class="fa-brands fa-instagram" ></div>
+          <div class="fa-brands fa-facebook" ></div>
+          <div class="fa-brands fa-x" ></div>
+          <div class="fa-brands fa-whatsapp" ></div>
+        </div>
+        <div class="final-card-button fa-solid fa-arrow-right"></div></div>
+    </div>
+  </div>
+  <script></script>
   </body>
+
 </html>
