Added volume, errors

--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
       <img src="" alt="" class="image">
     </div>
     <div class="quiz-container">
+
+      <div class="initial-card">
+        <h1>Welcome to my fucking special Quizi</h1>
+        <button>PLAY <i class="fa-solid fa-play"></i></button>
+      </div>
+
       <div class="quiz-card animate__animated">
         <div class="text-options animate__animated animate__fadeIn">
-              <h2 class="Question"></h2><p class="question-number">1</p>
+              <h2 class="Question"></h2>
+              <p class="volume"><i class="fa-solid fa-volume-high"></i></p>
+              <p class="question-number">1</p>
               <div class="separator"></div>
               <div class="answers">
                 <div class="ans 1" style="--time: 1s"></div>
@@ -53,7 +61,5 @@
         <div class="final-card-button fa-solid fa-arrow-right"></div></div>
     </div>
   </div>
-  <script></script>
   </body>
-
 </html>
